Add missing parameter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -774,6 +774,7 @@ Resources:
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         CodeS3ObjectVersion: !Ref ProxyPrxOrgCodeS3ObjectVersion
+        RootStackName: !GetAtt Constants.RootStackName
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
