--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -18,6 +18,9 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
+  RootStackName:
+    Type: String
+
 Mappings:
   EnvironmentTypeMap:
     Testing:
