--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -58,7 +58,7 @@ Resources:
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: S3 Signing Service }
+        - { Key: prx:dev:application, Value: Proxy }
       ValidationMethod: DNS
 
   ProxyLambdaIamRole:
