Fix domain mapping reference

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -367,7 +367,7 @@ Resources:
     Condition: CreateStagingResources # TODO
     Properties:
       ApiId: !Ref ProxyHttpApi
-      DomainName: !If [CreateProductionResources, proxy.prx.tech, proxy.staging.prx.tech]
+      DomainName: !Ref UtilityDomainName
       Stage: $default
   UtilityDomainNameRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
