Add missing period

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -374,7 +374,7 @@ Resources:
     Condition: CreateStagingResources # TODO
     Properties:
       Comment: Record sets for proxy server API
-      HostedZoneName: prx.tech
+      HostedZoneName: prx.tech.
       RecordSets:
         - AliasTarget:
             DNSName: !GetAtt UtilityDomainName.RegionalDomainName
