Clean up template

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -1,9 +1,12 @@
 # stacks/serverless/upload.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: File upload Lambda function
+
+Description: A serverless API application to generate S3 request signatures
+
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
+
 Parameters:
   OpsErrorMessagesSnsTopicArn:
     Type: String
@@ -17,6 +20,7 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+
 Resources:
   UploadHttpApi:
     Type: AWS::Serverless::HttpApi
@@ -335,6 +339,7 @@ Resources:
           ReturnData: true
       Threshold: 0.6
       TreatMissingData: notBreaching
+
 Outputs:
   SigningAccessKeyId:
     Description: >-
