--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -67,231 +67,232 @@ Resources:
         - { Key: prx:dev:application, Value: Proxy }
       ValidationMethod: DNS
 
-  ProxyLambdaIamRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service:
-                - "lambda.amazonaws.com"
-            Action:
-              - "sts:AssumeRole"
-      Path: "/"
-      ManagedPolicyArns:
-        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
-      Tags:
-        - Key: Project
-          Value: proxy.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  ProxyLambdaFunction:
-    Type: "AWS::Lambda::Function"
-    Properties:
-      Code:
-        S3Bucket: !Ref CodeS3Bucket
-        S3Key: lambda/PRX-proxy.prx.org.zip
-        S3ObjectVersion: !Ref CodeS3ObjectVersion
-      Description: Top-level proxy server for www.prx.org
-      Environment:
-        Variables:
-          CORPORATE_HOST: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, CorporateHost]
-          EXCHANGE_HOST: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ExchangeHost]
-          PRX_SESSION_KEY: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, PrxSessionKey]
-      Handler: index.handler
-      MemorySize: 192
-      Role: !GetAtt ProxyLambdaIamRole.Arn
-      Runtime: nodejs12.x
-      Timeout: 30
-      Tags:
-        - Key: Project
-          Value: proxy.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ProxyPrxOrg-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  ProxyRestApi:
-    Type: "AWS::ApiGateway::RestApi"
-    Properties:
-      Name: !Sub "${AWS::StackName} API"
-      Description: "API used by PRX Proxy Lambda"
-      BinaryMediaTypes:
-        - "*~1*" # or "*/*"
-      Tags:
-        - Key: Project
-          Value: proxy.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  ProxyRestApiResource:
-    Type: "AWS::ApiGateway::Resource"
-    Properties:
-      ParentId: !GetAtt ProxyRestApi.RootResourceId
-      PathPart: "{proxy+}"
-      RestApiId: !Ref ProxyRestApi
-  ProxyRestApiRootMethod:
-    Type: "AWS::ApiGateway::Method"
-    Properties:
-      AuthorizationType: NONE
-      HttpMethod: ANY
-      Integration:
-        IntegrationHttpMethod: POST
-        Type: AWS_PROXY
-        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ProxyLambdaFunction.Arn}/invocations
-      RestApiId: !Ref ProxyRestApi
-      ResourceId: !GetAtt ProxyRestApi.RootResourceId
-  ProxyRestApiMethod:
-    Type: "AWS::ApiGateway::Method"
-    Properties:
-      AuthorizationType: NONE
-      HttpMethod: ANY
-      Integration:
-        IntegrationHttpMethod: POST
-        Type: AWS_PROXY
-        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ProxyLambdaFunction.Arn}/invocations
-      RestApiId: !Ref ProxyRestApi
-      ResourceId: !Ref ProxyRestApiResource
-  ProxyRestApiDeployment:
-    Type: "AWS::ApiGateway::Deployment"
-    DependsOn:
-      - ProxyRestApiRootMethod
-      - ProxyRestApiMethod
-    Properties:
-      RestApiId: !Ref ProxyRestApi
-  ProxyRestApiStage:
-    Type: "AWS::ApiGateway::Stage"
-    Properties:
-      DeploymentId: !Ref ProxyRestApiDeployment
-      Description: Proxy lambda API gateway integration
-      RestApiId: !Ref ProxyRestApi
-      StageName: prod
-  ProxyRestApiLambdaPermission:
-    Type: "AWS::Lambda::Permission"
-    Properties:
-      Action: "lambda:InvokeFunction"
-      FunctionName: !Ref ProxyLambdaFunction
-      Principal: apigateway.amazonaws.com
-      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ProxyRestApi}/${ProxyRestApiStage}/*"
-  ProxyRestApiDomainName:
-    Type: "AWS::ApiGateway::DomainName"
-    Condition: CreateProductionResources
-    Properties:
-      CertificateArn: !Ref Certificate
-      DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
-      Tags:
-        - Key: Project
-          Value: proxy.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  ProxyRestApiBasePathMapping:
-    Type: "AWS::ApiGateway::BasePathMapping"
-    Condition: CreateProductionResources
-    Properties:
-      DomainName: !Ref ProxyRestApiDomainName
-      RestApiId: !Ref ProxyRestApi
-      Stage: prod
-  ProxyRestApiDomainNameRecordSetGroup:
-    Type: "AWS::Route53::RecordSetGroup"
-    Condition: CreateProductionResources
-    Properties:
-      Comment: Record sets for proxy server API
-      HostedZoneName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, HostedZoneName]
-      RecordSets:
-        - Type: AAAA
-          Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
-          AliasTarget:
-            DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
-            HostedZoneId: Z2FDTNDATAQYW2
-        - Type: A
-          Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
-          AliasTarget:
-            DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
-            HostedZoneId: Z2FDTNDATAQYW2
-  ProductionRedirectRestApiDomainName:
-    Type: "AWS::ApiGateway::DomainName"
-    Condition: CreateProductionResources
-    Properties:
-      CertificateArn: !Ref Certificate
-      DomainName: prx.org
-      Tags:
-        - Key: Project
-          Value: proxy.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  ProductionRedirectRestApiBasePathMapping:
-    Type: "AWS::ApiGateway::BasePathMapping"
-    Condition: CreateProductionResources
-    Properties:
-      DomainName: !Ref ProductionRedirectRestApiDomainName
-      RestApiId: !Ref ProxyRestApi
-      Stage: prod
-  ProductionRestApiDomainName:
-    Type: "AWS::ApiGateway::DomainName"
-    Condition: CreateProductionResources
-    Properties:
-      CertificateArn: !Ref Certificate
-      DomainName: www.prx.org
-      Tags:
-        - Key: Project
-          Value: proxy.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-  ProductionRestApiBasePathMapping:
-    Type: "AWS::ApiGateway::BasePathMapping"
-    Condition: CreateProductionResources
-    Properties:
-      DomainName: !Ref ProductionRestApiDomainName
-      RestApiId: !Ref ProxyRestApi
-      Stage: prod
-  ApiGateway5XXAlarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Properties:
-      ActionsEnabled: true
-      AlarmName: !Sub "[proxy.prx.org][${EnvironmentType}] 5XXErrors"
-      AlarmActions:
-        - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      InsufficientDataActions:
-        - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      OKActions:
-        - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription: >
-        Too many 500 errors from the corporate site proxy
-      ComparisonOperator: GreaterThanThreshold
-      Dimensions:
-        - Name: ApiName
-          Value: !Sub "${AWS::StackName} API"
-      EvaluationPeriods: 3
-      MetricName: 5xxError
-      Namespace: AWS/ApiGateway
-      Period: 300
-      Statistic: Sum
-      Threshold: 1
-      TreatMissingData: notBreaching
+  # ProxyLambdaIamRole:
+  #   Type: "AWS::IAM::Role"
+  #   Properties:
+  #     AssumeRolePolicyDocument:
+  #       Version: "2012-10-17"
+  #       Statement:
+  #         - Effect: "Allow"
+  #           Principal:
+  #             Service:
+  #               - "lambda.amazonaws.com"
+  #           Action:
+  #             - "sts:AssumeRole"
+  #     Path: "/"
+  #     ManagedPolicyArns:
+  #       - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+  #     Tags:
+  #       - Key: Project
+  #         Value: proxy.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  # ProxyLambdaFunction:
+  #   Type: "AWS::Lambda::Function"
+  #   Properties:
+  #     Code:
+  #       S3Bucket: !Ref CodeS3Bucket
+  #       S3Key: lambda/PRX-proxy.prx.org.zip
+  #       S3ObjectVersion: !Ref CodeS3ObjectVersion
+  #     Description: Top-level proxy server for www.prx.org
+  #     Environment:
+  #       Variables:
+  #         CORPORATE_HOST: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, CorporateHost]
+  #         EXCHANGE_HOST: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ExchangeHost]
+  #         PRX_SESSION_KEY: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, PrxSessionKey]
+  #     Handler: index.handler
+  #     MemorySize: 192
+  #     Role: !GetAtt ProxyLambdaIamRole.Arn
+  #     Runtime: nodejs12.x
+  #     Timeout: 30
+  #     Tags:
+  #       - Key: Project
+  #         Value: proxy.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: Name
+  #         Value: !Sub ProxyPrxOrg-${EnvironmentType}
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  # ProxyRestApi:
+  #   Type: "AWS::ApiGateway::RestApi"
+  #   Properties:
+  #     Name: !Sub "${AWS::StackName} API"
+  #     Description: "API used by PRX Proxy Lambda"
+  #     BinaryMediaTypes:
+  #       - "*~1*" # or "*/*"
+  #     Tags:
+  #       - Key: Project
+  #         Value: proxy.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  # ProxyRestApiResource:
+  #   Type: "AWS::ApiGateway::Resource"
+  #   Properties:
+  #     ParentId: !GetAtt ProxyRestApi.RootResourceId
+  #     PathPart: "{proxy+}"
+  #     RestApiId: !Ref ProxyRestApi
+  # ProxyRestApiRootMethod:
+  #   Type: "AWS::ApiGateway::Method"
+  #   Properties:
+  #     AuthorizationType: NONE
+  #     HttpMethod: ANY
+  #     Integration:
+  #       IntegrationHttpMethod: POST
+  #       Type: AWS_PROXY
+  #       Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ProxyLambdaFunction.Arn}/invocations
+  #     RestApiId: !Ref ProxyRestApi
+  #     ResourceId: !GetAtt ProxyRestApi.RootResourceId
+  # ProxyRestApiMethod:
+  #   Type: "AWS::ApiGateway::Method"
+  #   Properties:
+  #     AuthorizationType: NONE
+  #     HttpMethod: ANY
+  #     Integration:
+  #       IntegrationHttpMethod: POST
+  #       Type: AWS_PROXY
+  #       Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ProxyLambdaFunction.Arn}/invocations
+  #     RestApiId: !Ref ProxyRestApi
+  #     ResourceId: !Ref ProxyRestApiResource
+  # ProxyRestApiDeployment:
+  #   Type: "AWS::ApiGateway::Deployment"
+  #   DependsOn:
+  #     - ProxyRestApiRootMethod
+  #     - ProxyRestApiMethod
+  #   Properties:
+  #     RestApiId: !Ref ProxyRestApi
+  # ProxyRestApiStage:
+  #   Type: "AWS::ApiGateway::Stage"
+  #   Properties:
+  #     DeploymentId: !Ref ProxyRestApiDeployment
+  #     Description: Proxy lambda API gateway integration
+  #     RestApiId: !Ref ProxyRestApi
+  #     StageName: prod
+  # ProxyRestApiLambdaPermission:
+  #   Type: "AWS::Lambda::Permission"
+  #   Properties:
+  #     Action: "lambda:InvokeFunction"
+  #     FunctionName: !Ref ProxyLambdaFunction
+  #     Principal: apigateway.amazonaws.com
+  #     SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ProxyRestApi}/${ProxyRestApiStage}/*"
+  # ProxyRestApiDomainName:
+  #   Type: "AWS::ApiGateway::DomainName"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     CertificateArn: !Ref Certificate
+  #     DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+  #     Tags:
+  #       - Key: Project
+  #         Value: proxy.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  # ProxyRestApiBasePathMapping:
+  #   Type: "AWS::ApiGateway::BasePathMapping"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     DomainName: !Ref ProxyRestApiDomainName
+  #     RestApiId: !Ref ProxyRestApi
+  #     Stage: prod
+  # ProxyRestApiDomainNameRecordSetGroup:
+  #   Type: "AWS::Route53::RecordSetGroup"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     Comment: Record sets for proxy server API
+  #     HostedZoneName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, HostedZoneName]
+  #     RecordSets:
+  #       - Type: AAAA
+  #         Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+  #         AliasTarget:
+  #           DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
+  #           HostedZoneId: Z2FDTNDATAQYW2
+  #       - Type: A
+  #         Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+  #         AliasTarget:
+  #           DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
+  #           HostedZoneId: Z2FDTNDATAQYW2
+  # ProductionRedirectRestApiDomainName:
+  #   Type: "AWS::ApiGateway::DomainName"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     CertificateArn: !Ref Certificate
+  #     DomainName: prx.org
+  #     Tags:
+  #       - Key: Project
+  #         Value: proxy.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  # ProductionRedirectRestApiBasePathMapping:
+  #   Type: "AWS::ApiGateway::BasePathMapping"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     DomainName: !Ref ProductionRedirectRestApiDomainName
+  #     RestApiId: !Ref ProxyRestApi
+  #     Stage: prod
+  # ProductionRestApiDomainName:
+  #   Type: "AWS::ApiGateway::DomainName"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     CertificateArn: !Ref Certificate
+  #     DomainName: www.prx.org
+  #     Tags:
+  #       - Key: Project
+  #         Value: proxy.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  # ProductionRestApiBasePathMapping:
+  #   Type: "AWS::ApiGateway::BasePathMapping"
+  #   Condition: CreateProductionResources
+  #   Properties:
+  #     DomainName: !Ref ProductionRestApiDomainName
+  #     RestApiId: !Ref ProxyRestApi
+  #     Stage: prod
+
+  # ApiGateway5XXAlarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: !Sub "[proxy.prx.org][${EnvironmentType}] 5XXErrors"
+  #     AlarmActions:
+  #       - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
+  #     InsufficientDataActions:
+  #       - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
+  #     OKActions:
+  #       - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
+  #     AlarmDescription: >
+  #       Too many 500 errors from the corporate site proxy
+  #     ComparisonOperator: GreaterThanThreshold
+  #     Dimensions:
+  #       - Name: ApiName
+  #         Value: !Sub "${AWS::StackName} API"
+  #     EvaluationPeriods: 3
+  #     MetricName: 5xxError
+  #     Namespace: AWS/ApiGateway
+  #     Period: 300
+  #     Statistic: Sum
+  #     Threshold: 1
+  #     TreatMissingData: notBreaching
 
   ProxyHttpApi:
     Type: AWS::Serverless::HttpApi
