Add parameter overrides to production deploy

--- a/devops/porter-cd-pipeline.yml
+++ b/devops/porter-cd-pipeline.yml
@@ -755,12 +755,19 @@ Resources:
               Configuration:
                 ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
+                ParameterOverrides: !Sub |
+                  {
+                    "FtpCopyEcsTaskDefinitionImage": { "Fn::GetParam" : ["FtpBuildArtifact", "${kFtpArtifactFileName}", "${kArtifactImageKey}"]},
+                    "TranscodeEcsTaskDefinitionImage": { "Fn::GetParam" : ["TranscodeBuildArtifact", "${kTranscodeArtifactFileName}", "${kArtifactImageKey}"]}
+                  }
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: !Ref ProductionStackName
                 TemplateConfiguration: TemplateConfigZipArtifact::production.json
                 TemplatePath: !Sub SamBuildArtifact::${kPackagedTemplateFileName}
               InputArtifacts:
                 - Name: SamBuildArtifact
+                - Name: FtpBuildArtifact
+                - Name: TranscodeBuildArtifact
                 - Name: TemplateConfigZipArtifact
               RunOrder: 2
 
